fix(drawer): add a z-index and position
Adds a `z-index` and `position: relative;` to create a new stacking context. This gives the page 100 z-indexes to use for stacking without interfering with the drawer.

--- a/src/Drawer/index.scss
+++ b/src/Drawer/index.scss
@@ -2,6 +2,8 @@
   --transition-speed-fast: 0.4s;
   --transition-speed-medium: 0.7s;
   --transition-speed-slow: 1s;
+  z-index: 100;
+  position: relative;
 }
 
 .drawer {
